updating filter and sort implementation using predicate